src/components/NoteBook/NoteBook.css
@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');


.experience-bullet-points{
    display: flex;
    justify-content: center;
    align-items: center;
    padding-right: 40px;
    height: 45%;
}

.experience-bullet-points img{
    width: 45%;
    height: 45%;
    align-items: center;
}

.experience-bullet-points-overall{
    margin-top: -10px; 

}


.experience-bullet-points-overall li{
  line-height: 25px;
    font-size: 18px;

}

.page {
  flex: 1;
  color: black;
  font-family: 'Gloria Hallelujah', cursive;
  font-size: 18px;
  line-height: 25px; 
  border: none;
  outline: none;
  resize: none;
  background-image: repeating-linear-gradient(
    to bottom,
    #fefefe,
    #fefefe 24px,
    #f0f0f0 25px
  );
  white-space: pre-wrap;
  text-align: left;
  padding-left: 40px;
  overflow-y: scroll;
}



.page h1{
    font-size: 20px;
    text-align: center;
    padding-right: 40px;
    text-decoration: underline wavy #312d2a;
    text-underline-offset: 6px;
    margin-bottom: 7%;
  font-family: 'Gloria Hallelujah', cursive;

}

.notebook-experience{
  font-size: 16px;
  padding: 0px;

}

.notebook-experience p{
  padding: 0px;
  margin: 0;
  text-decoration: #312d2a;
}

.text-highlight {
  background-color: #ffe6f0;
  padding: 0 4px;
  border-radius: 12px;
}

.notebook-experience h1{
  font-family: 'Patrick Hand', cursive;
  text-decoration: none;
  text-align: left;
  font-size: 18px;
  font-weight: 200;
  margin-top: 0;
  margin-bottom: 0;

}

.notebook-container {
    display: flex;
  flex-direction: row;
  align-items: center;
  gap: 40px;

  width: 80%;
  height: 80vh;
  margin: 20px auto; 

  border: 1px solid #ccc;
  border-radius: 10px;
  background-color: #fffde7;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  box-sizing: border-box;
  font-family: 'Gloria Hallelujah', cursive;


}

.page {
    flex: 1;
    color: black;
  font-family: 'Patrick Hand', cursive;

    font-size: 16px;
    line-height: 1.5;
    border: none;
    outline: none;
    resize: none;
    background-image: repeating-linear-gradient(
        to bottom,
        #fefefe,
        #fefefe 24px,
        #f0f0f0 25px
    );
    text-align: left;
    padding-left: 40px;
    overflow-y: scroll;      
    flex: 1;
    min-width: 300px;
    padding: 20px;
    background-color: #fffde7;
    border-radius: 8px;
    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
    white-space: pre-wrap;
}


.page p {
    font-family: 'Gloria Hallelujah', cursive;

}

.spine {
  width: 10px;
  background-color: #c89f7f;
  
}

@media (max-width: 768px) {
  .notebook-container {
    flex-direction: column;
    align-items: center;
  }

  .spine {
    display: none;
  }

  .page + .page {
    margin-top: 20px;
  }

  .page + .spine,
  .spine + .page {
    margin-left: 0;
  }
}

.empty-experience {
  height: 100%;
  width: 100%;
}

.empty-experience p{
    padding-top: 30%;
}

.doodle{
    width: 100%;
  height: auto;
  display: block;
}
.doodle-img {
    padding-top: 10%;
    width: 50%;        
    height: auto;           
    display: block;         
    margin: 0 auto;   
}

